<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>o3r_color_pcl_ros2</name>
  <version>0.1.0</version>
  <description>O3R Colored PCL</description>
  <maintainer email="sameer.tuteja05@gmail.com">Sameer Tuteja</maintainer>
  <license>Apache 2.0</license>

  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-scipy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ifm3d_ros2</build_depend>
  <build_depend>python-open3d-pip</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ifm3d_ros2</exec_depend>
  <exec_depend>python-open3d-pip</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
